# TestTechnique_AirFrance

./: CDG&EWR.csv  CDG&JFK.csv  CMakeLists.txt  Dockerfile  FlightNbr.h  OAndD.cpp  OAndD.h  main.cpp  nomFichier.csv  test.csv
data/: A5486_CDG&LGA.csv  nomFichier.csv
src/: FlightNbr.h  OAndD.h  main.cpp
tests/: OAndDTest.cpp
